# telepathy

./: .gitignore  AGENTS.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: rust.yml
android/app/: build.gradle
docs/: AGENTS.md  CLI.md  TRACING.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/controllers/: audio_devices_controller.dart  audio_settings_controller.dart  chat_controller.dart  chat_input_controller.dart  index.dart  interface_controller.dart  network_settings_controller.dart  preferences_controller.dart  profiles_controller.dart  settings_controller.dart  state_controller.dart  statistics_controller.dart
lib/models/: index.dart  overlay_config.dart  profile.dart  room.dart  temporary_config.dart
lib/settings/: controller.dart  header.dart  logs.dart  menu.dart  view.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: .gitignore  Cargo.toml
rust/.config/: nextest.toml
rust/messages/: Cargo.toml
rust/messages/src/: lib.rs
rust/relay-server/: Cargo.toml
rust/relay-server/src/: lib.rs  main.rs
rust/relay_server/: Cargo.toml  Dockerfile  go.mod  main.go
rust/relay_server/src/: main.rs
rust/sea_codec/: Cargo.toml
rust/sea_codec/src/: decoder.rs  encoder.rs  lib.rs
rust/sea_codec/src/codec/: chunk.rs  dqt.rs  encoder_base.rs  encoder_cbr.rs  encoder_vbr.rs  file.rs
rust/telepathy/: Cargo.toml
rust/telepathy-audio/: Cargo.toml  README.md
rust/telepathy-audio/benches/: common.rs  sea_codec.rs  throughput_bench.rs  wasm_operations.rs  wasm_processing.rs
rust/telepathy-audio/examples/: callback_only.rs  custom_channel.rs  mpsc_channel.rs  sea_decode.rs  sea_encode.rs
rust/telepathy-audio/src/: adapters.rs  constants.rs  devices.rs  error.rs  lib.rs  mock.rs  player.rs
rust/telepathy-audio/src/devices/: cpal_host.rs  error.rs  mock_host.rs  mod.rs
rust/telepathy-audio/src/internal/: buffer_pool.rs  processing.rs  processor.rs  state.rs  thread.rs  traits.rs  utils.rs
rust/telepathy-audio/src/io/: input.rs  mod.rs  output.rs  traits.rs
rust/telepathy-audio/src/platform/: web_audio.rs
rust/telepathy-audio/src/sea/: decoder.rs  encoder.rs  mod.rs
rust/telepathy-audio/src/sea/codec/: bits.rs  chunk.rs  common.rs  decoder.rs  dqt.rs  encoder_base.rs  encoder_cbr.rs  encoder_vbr.rs  file.rs  lms.rs  mod.rs  qt.rs
rust/telepathy-audio/tests/: common.rs  integration_test.rs  latency_integration_test.rs  processor_integration_test.rs  sea_codec_test.rs  trait_integration_test.rs
rust/telepathy-cli/: Cargo.toml  README.md
rust/telepathy-cli/src/: callbacks.rs  commands.rs  events.rs  main.rs  output.rs  runner.rs
rust/telepathy-core/: Cargo.toml
rust/telepathy-core/src/: flutter.rs  frb_generated.rs  internal.rs  lib.rs  native.rs  overlay.rs  player.rs  types.rs
rust/telepathy-core/src/audio/: ios.rs  player.rs
rust/telepathy-core/src/flutter/: callbacks.rs  logging.rs  mod.rs  utils.rs
rust/telepathy-core/src/internal/: audio_adapters.rs  callbacks.rs  connections.rs  core.rs  error.rs  helpers.rs  messages.rs  mod.rs  runtime.rs  screenshare.rs  sockets.rs  state.rs  tests.rs  utils.rs
rust/telepathy-core/src/native/: callbacks.rs
rust/telepathy-core/src/overlay/: color.rs  error.rs  mod.rs  overlay.rs  windows.rs
rust/telepathy-core/tests/: core_integration_test.rs
rust/telepathy-tui/: Cargo.toml
rust/telepathy-tui/src/: events.rs  main.rs  state.rs
rust/telepathy-tui/src/app/: callbacks.rs  mod.rs  model.rs  port.rs
rust/telepathy-tui/src/components/: call_controls_pane.rs  chat_pane.rs  confirm_dialog.rs  contacts_pane.rs  incoming_call_dialog.rs  mod.rs  status_bar.rs
rust/telepathy-tui/src/storage/: config.rs  fallback.rs  keychain.rs  mod.rs
rust/telepathy/benches/: bench.rs
rust/telepathy/src/: error.rs  flutter.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/telepathy/src/api/: error.rs  flutter.rs  logger.rs  mod.rs  player.rs  screenshare.rs  sockets.rs  telepathy.rs  utils.rs
rust/telepathy/src/api/audio/: codec.rs  mod.rs  player.rs  processing.rs  web_audio.rs
rust/telepathy/src/api/overlay/: mod.rs  overlay.rs  windows.rs
rust/telepathy/src/audio/: codec.rs  mod.rs  player.rs  processing.rs  traits.rs  web_audio.rs
rust/telepathy/src/flutter/: callbacks.rs  mod.rs
rust/telepathy/src/overlay/: overlay.rs  windows.rs
rust/telepathy/src/telepathy/: audio_adapters.rs  core.rs  helpers.rs  messages.rs  mod.rs  screenshare.rs  sockets.rs  tests.rs  utils.rs
rust/telepathy_audio/: Cargo.toml  README.md
rust/telepathy_audio/benches/: common.rs  mock_input.rs  mock_output.rs  processing_bench.rs  processing_bench_wasm.rs  throughput_bench.rs  wasm_operations.rs  wasm_processing.rs  x86_processing.rs
rust/telepathy_audio/examples/: callback_only.rs  custom_channel.rs  mpsc_channel.rs
rust/telepathy_audio/src/: adapters.rs  codec.rs  constants.rs  devices.rs  error.rs  input.rs  lib.rs  output.rs  player.rs  processor.rs  state.rs  traits.rs  utils.rs  web_audio.rs
rust/telepathy_audio/src/internal/: buffer_pool.rs  codec.rs  mod.rs  processing.rs  processor.rs  state.rs  thread.rs  traits.rs  utils.rs
rust/telepathy_audio/src/io/: input.rs  mod.rs  output.rs  traits.rs
rust/telepathy_audio/src/platform/: mod.rs  web_audio.rs
rust/telepathy_audio/src/sea/: decoder.rs  encoder.rs  mod.rs
rust/telepathy_audio/src/sea/codec/: chunk.rs  common.rs  encoder_base.rs  encoder_cbr.rs  encoder_vbr.rs  file.rs
rust/telepathy_audio/tests/: integration_test.rs  latency_integration_test.rs  sea_codec_test.rs  trait_integration_test.rs
rust_builder/android/: build.gradle
system-tests/: build.sh  conftest.py  docker-compose.yml  pytest.ini  requirements.txt  up.sh
system-tests/relay/: config.toml  (+1 more)
web/: build_web.sh  index.html  manifest.json  run_web.sh
windows/: installer.iss
(+142 files in other folders)
