[package]
name = "sea-codec"
version = "0.6.1"
description = "Low-complexity, lossy audio codec designed for embedded devices"
homepage = "https://github.com/Daninet/sea-codec"
repository = "https://github.com/Daninet/sea-codec"
keywords = ["audio", "codec", "encoder", "decoder", "embedded"]
categories = ["multimedia::audio", "multimedia::encoding"]
edition = "2024"
license = "MIT"

[dependencies]
libm = "0.2"
kanal = "0.1.1"
bytes = "1"