[package]
name = "telepathy_core"
version = "2.8.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
flutter = ["dep:flutter_rust_bridge"]
native = []
integration-testing = ["mockall", "async-trait", "iroh/test-utils"]
default = ["flutter"]

[dependencies]
atomic_float = "1"
async-trait = { version = "0.1", optional = true }
bytes = "1"
chrono = "*"
cfg-if = "1"
flutter_rust_bridge = { version = "=2.12.0", default-features = false, features = ["rust-async", "thread-pool", "dart-opaque", "anyhow"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
kanal = "0.1.1"
lazy_static = "1"
mockall = { version = "0.14", optional = true }
regex = "1" # TODO consider removing regex dep
serde = { version = "1", features = ["derive"] }
speedy = "=0.8.7"
telepathy-audio = { path = "../telepathy-audio" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "registry", "std"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
url = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics", "Win32_Graphics_GdiPlus", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
widestring = "1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "*"
objc2-foundation = "*"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "1.0.0-rc.1", default-features = false }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio = { version = "1", features = ["time", "io-util", "macros", "rt"] }
tracing-wasm = "0.2"
uuid = { version = "1", features = ["v4", "js"] }
wasmtimer = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
iroh = { version = "1.0.0-rc.1", features = ["tls-aws-lc-rs"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tracing-appender = "0.2"
tracing-panic = "0.1"
tokio = { version = "1", features = ["time", "io-util", "macros", "process", "net", "rt-multi-thread", "fs"] }
uuid = { version = "1", features = ["v4"] }
