[package]
name = "telepathy-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.10"
keyring = "3.6.3"
log = "0.4.29"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
telepathy-core = { package = "telepathy_core", version = "2.6.3", path = "../telepathy-core" }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tuirealm = { version = "3.3.0", default-features = false, features = ["crossterm"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
