[package]
name = "telepathy-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
crossterm = "0.29"
dirs = "6"
env_logger = "0.11"
keyring = "3"
log = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telepathy-core = { package = "telepathy_core", version = "2", path = "../telepathy-core", default-features = false, features = ["native"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tuirealm = { version = "3", default-features = false, features = ["crossterm", "async-ports"] }
uuid = { version = "1", features = ["v4", "serde"] }
