[package]
name = "telepathy"
version = "2.4.14"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sea-codec = { path = "../sea_codec" }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
cpal = { version = "0.16", features = ["wasm-bindgen"] }
log = "0.4"
kanal = "0.1.1"
rubato = "0.16"
nnnoiseless = { version = "0.5", default-features = false }
atomic_float = "1"
flutter_rust_bridge = "=2.11.1"
parking_lot = "0.12"
lazy_static = "1"
libp2p-stream = { version = "0.4.0-alpha" }
chrono = "*"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log-panics = "2"
bincode = "2"
mockall = "0.14"
async-trait = "0.1"
cfg-if = "1"
ordered-float = "5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics", "Win32_Graphics_GdiPlus", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
widestring = "1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "*"
objc2-foundation = "*"

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1", features = ["time", "io-util", "macros", "rt"] }
libp2p = { version = "0.56", features = ["quic", "ping", "dcutr", "identify", "macros", "noise", "yamux", "relay", "wasm-bindgen"] }
libp2p-webtransport-websys = "0.5"
wasm-logger = "0.2.0"
wasmtimer = "0.4"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamTrack",
    "AudioWorklet",
    "AudioWorkletNode",
    "BaseAudioContext",
    "MessagePort",
    "MediaStreamAudioDestinationNode",
    "MessageEvent",
    "console",
    "Url",
    "BlobPropertyBag",
    "Blob",
    "Navigator",
    "Window"
] }
js-sys = "0.3"
wasm_sync = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "io-util", "macros", "process", "net", "rt-multi-thread", "fs"] }
libp2p = { version = "0.56", features = ["tokio", "quic", "tcp", "ping", "dcutr", "identify", "macros", "noise", "yamux", "relay"] }
fast_log = "1.7"

[dev-dependencies]
rand = "0.8"
criterion = "0.7"
relay_server = { path = "../relay_server" }

[[bench]]
name = "bench"
harness = false