[package]
name = "telepathy_audio"
version = "0.1.0"
edition = "2024"
description = "Audio processing library for telepathy with device management, codec support, and SIMD optimization"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
atomic_float = "1"
bytes = "1"
crossbeam = "0.8"
cfg-if = "1"
cpal = { version = "0.17", features = ["wasm-bindgen", "audioworklet"] }
log = "0.4"
nnnoiseless = { version = "0.5", default-features = false }
kanal = "0.1.1"
rubato = { version = "0.16", default-features = false }
libm = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["time", "io-util", "macros", "rt", "sync"] }
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamTrack",
    "AudioWorklet",
    "AudioWorkletNode",
    "BaseAudioContext",
    "MessagePort",
    "MediaStreamAudioDestinationNode",
    "MessageEvent",
    "console",
    "Url",
    "BlobPropertyBag",
    "Blob",
    "Navigator",
    "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm_sync = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["time", "io-util", "macros", "process", "net", "rt-multi-thread", "fs", "sync"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.7"

[[bench]]
name = "throughput_bench"
harness = false