[package]
name = "telepathy_audio"
version = "0.1.0"
edition = "2024"
description = "Audio processing library for telepathy with device management, codec support, and SIMD optimization"
license = "MIT"

[package.metadata]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["lib"]

[dependencies]
atomic_float = "1"
bytes = "1"
crossbeam = "0.8"
cfg-if = "1"
cpal = { version = "0.17", features = ["wasm-bindgen", "audioworklet"] }
log = "0.4"
nnnoiseless = { version = "0.5", default-features = false }
kanal = "0.1.1"
rubato = { version = "0.16", default-features = false }
libm = "0.2"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm_thread = { version = "0.3", default-features = false  }
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamTrack",
    "AudioWorklet",
    "AudioWorkletNode",
    "BaseAudioContext",
    "MessagePort",
    "MediaStreamAudioDestinationNode",
    "MessageEvent",
    "console",
    "Url",
    "BlobPropertyBag",
    "Blob",
    "Navigator",
    "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm_sync = "0.1"
wasmtimer = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rtrb = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "processing_bench"
harness = false