[package]
name = "telepathy_audio"
version = "0.2.0"
edition = "2024"
description = "Audio processing library for telepathy with device management, codec support, and SIMD optimization"
license = "MIT"

[package.metadata]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[lib]
crate-type = ["lib"]

[dependencies]
atomic_float = "1"
audioadapter-buffers = "2"
bytes = "1"
crossbeam = "0.8"
cfg-if = "1"
cpal = { version = "0.17", features = ["wasm-bindgen"] }
log = "0.4"
nnnoiseless = { version = "0.5", default-features = false }
rubato = "1"
libm = "0.2"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
rtrb = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm_thread = { version = "0.3", default-features = false  }
web-sys = { version = "=0.3.85", features = [
    "AudioContext",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamTrack",
    "AudioWorklet",
    "AudioWorkletNode",
    "BaseAudioContext",
    "MessagePort",
    "MediaStreamAudioDestinationNode",
    "MessageEvent",
    "console",
    "Url",
    "BlobPropertyBag",
    "Blob",
    "Navigator",
    "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm_sync = "0.1"
wasmtimer = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ten-vad-rs = "0.1.6"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio-test = "0.4"
criterion = "0.8"
kanal = "0.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "x86_processing"
harness = false

[[bench]]
name = "wasm_processing"
harness = false

[[bench]]
name = "wasm_operations"
harness = false